--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -44,6 +44,27 @@
             <input type="submit" value="注册新用户" class="btn btn-primary btn-lg">
         </div>
     </form>
+
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script>
+        $(function() {
+            $('#form').on('submit',function() {
+                $.ajax({
+                    url:"/register",
+                    type:'post',
+                    data:$('#form').serialize(),
+                    dataType:'json',
+                    success:function(result) {
+                        if(result.status === 200) {
+                            alert(result.msg);
+                            location.href = "/login"
+                        }
+                    }
+                })
+
+            })
+        })
+    </script>
 </body>
 
 </html>
