--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -61,7 +61,8 @@
                         }
                     }
                 })
-
+                //阻止form表单提交
+                return false;
             })
         })
     </script>
